# parallel-conduit

./: .gitignore  LICENSE  README.md  parallel-conduit.cabal
docs/: concurrently.dia  example.dia  merge.dia  parFuse.dia  parFuseBoth.dia  parFuseS.dia  parFuseUpstream.dia  tee.dia
src/Data/Conduit/: Parallel.hs
src/Data/Conduit/Parallel/Internal/: Duct.hs
