name:                parallel-conduit
version:             0.1.0.0
synopsis:            parallel conduit implementation
description:         conduit stages run in different threads connected by myvars
homepage:            https://github.com/bhurt/parallel-conduit#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Hurt
maintainer:          bhurt42@gmail.com
copyright:           2019 Brian Hurt
category:            Data, Conduit
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Parallel
                        , Data.Conduit.Parallel.Internal.Duct
  build-depends:       base >= 4.7 && < 5
                        , atomic-primops
                        , conduit
                        , containers
                        , deepseq
                        , monad-control
                        , mtl
                        , stm
                        , transformers
                        , transformers-base
                        , unliftio
  default-language:    Haskell2010
  ghc-options:         -O2 -W -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/bhurt/parallel-conduit
